external-crates/move/crates/move-package/tests/snapshots/test_renaming_computation__simple_root_renaming.snap
---
source: crates/move-package/tests/test_renaming_computation.rs
expression: writer
---
Package: C
	local(A) -> root(CA)
Package: D
	local(A) -> root(DA)
Package: test
	local(A) -> root(A)
	local(CA) -> root(CA)
	local(DA) -> root(DA)
